<resources>
    <string name="app_name" translatable="false">Key Mapper</string>
    <string name="slogan">Unleash your keys!</string>
    <string name="accessibility_service_explanation">Key Mapper requires the use of an accessibility service so that it can detect and change what your button presses do while you are outside of the app. Your key maps will only work once you have enabled the accessibility service. It must also be turned on to create a trigger and test actions.</string>
    <string name="selection_count"> selected</string>
    <string name="ime_service_label" translatable="false">Key Mapper Input Method</string>
    <string name="enable">Enable</string>
    <string name="shrug" translatable="false">¯\\_(ツ)_/¯</string>
    <string name="recyclerview_placeholder">¯\\_(ツ)_/¯\n\nNothing here!</string>
    <string name="choose_action_warning_requires_root">Requires root</string>
    <string name="no_actions">No actions</string>
    <string name="no_trigger">No trigger</string>
    <string name="middot" translatable="false">•</string>
    <string name="unknown_device_name">Unknown device name</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="follow_system">Follow system</string>
    <string name="this_device">This Android device</string>
    <string name="any_device">Any input device</string>
    <string name="slider_default">Default</string>
    <string name="button_enable_accessibility_service">Enable accessibility service</string>
    <string name="button_restart_accessibility_service">Restart accessibility service</string>
    <string name="share_backup">Share</string>
    <string name="app_list_empty">Nothing here!</string>
    <string name="ui_element_list_empty">Key Mapper did not detect any interactions. Try showing additional elements.</string>
    <string name="stop_repeating_dot_dot_dot">Stop repeating when…</string>
    <string name="stop_repeating_when_trigger_released">Trigger is released</string>
    <string name="stop_repeating_trigger_pressed_again">Trigger is pressed again</string>
    <string name="stop_repeating_limit_reached">Limit reached</string>
    <string name="stop_holding_down_when_trigger_released">Trigger is released</string>
    <string name="stop_holding_down_trigger_pressed_again">Trigger is pressed again</string>
    <string name="show_hidden_apps">Show hidden apps</string>
    <string name="modifiers">Modifiers</string>
    <string name="chip_play_store" translatable="false">Play Store</string>
    <string name="chip_fdroid" translatable="false">F-Droid</string>
    <string name="chip_github" translatable="false">GitHub</string>
    <string name="tap_coordinate_screenshot_message">IMPORTANT!!! These coordinates are only correct when your display is in the same orientation as the screenshot! This action will cancel any touches or gestures you are doing on the screen.\n\nIf you need help finding the coordinates of a point on your screen take a screenshot and then tap on the screenshot where you want this action to press.</string>
    <string name="pinch_screen_x_y_note">Note: When using \"pinch in\" X and Y are the END coordinates, when using \"pinch out\" X and Y are the START coordinates.</string>
    <string name="tap_actions_to_fix">Tap actions to fix!</string>
    <string name="tap_constraints_to_fix">Tap constraints to fix!</string>
    <string name="shortcut_label_action">Perform actions</string>
    <string name="hold_down_until_trigger_is_dot_dot_dot">Hold down until trigger is…</string>
    <string name="from_no_device">No device</string>
    <string name="intent_extras_recycler_view_placeholder">¯\\_(ツ)_/¯\n\nNo extras!</string>
    <string name="content_description_done_configuring_key_event">Done configuring key event action</string>
    <string name="content_description_done_configuring_coordinate">Done picking coordinate</string>
    <string name="clip_key_mapper_log">Key Mapper log</string>
    <string name="whats_new">What\'s New</string>
    <string name="whats_new_version_badge">Version %1$s</string>
    <string name="whats_new_section_new">New</string>
    <string name="whats_new_section_improved">Improved</string>
    <string name="whats_new_section_fixed">Fixed</string>
    <string name="whats_new_view_changelog_button">View full changelog</string>
    <string name="whats_new_support_prompt">Feeling generous? Support development of more free features below\u00A0❤️</string>
    <string name="whats_new_support_thank_you">Thank you for supporting Key\u00A0Mapper\u00A0❤️</string>
    <string name="caption_action_type_sound">You can either use a system ringtone or select a custom sound file.\n\nThe custom sound file will be copied to Key Mapper\'s private data folder, which means your actions will still work even if the file is moved or deleted. It will also be included in backups with your key maps in the zip file.
    You can delete saved sound files in the settings.</string>
    <string name="caption_no_paired_bt_devices">Can\'t find any paired devices. Is Bluetooth turned on?</string>
    <string name="create_key_map_shortcut_footer">Tap a key map to use as a shortcut.</string>
    <string name="create_key_map_shortcut_app_title">Create key map shortcut</string>
    <string name="switch_enabled">Enabled</string>
    <string name="switch_disabled">Disabled</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="config_key_map_name_placeholder">(no name)</string>
    <string name="config_key_map_edit_name">Edit key map name</string>
    <string name="config_key_map_save_name">Save key map name</string>
    <string name="config_key_map_enabled_tooltip">Key map enabled</string>
    <string name="config_key_map_disabled_tooltip">Key map disabled</string>
    <string name="reset">Reset</string>
    <string name="enable_device_admin_message">Once you have enabled the device admin, you must DEACTIVATE it if you want to uninstall Key Mapper.</string>
    <string name="action_title_wait_ms">Wait %sms</string>
    <string name="action_title_wait_secs">Wait %ss</string>
    <string name="action_chip_delay_ms">%sms</string>
    <string name="action_chip_delay_secs">%ss</string>
    <string name="action_chip_repeat">Repeat</string>
    <string name="action_chip_repeat_limit">Repeat %dx</string>
    <string name="action_chip_toggle_repeat">Toggle repeat</string>
    <string name="action_chip_hold">Hold</string>
    <string name="action_chip_toggle_hold">Toggle hold</string>
    <string name="action_chip_hold_repeat">Hold &amp; repeat</string>
    <string name="action_chip_hold_repeat_limit">Hold &amp; repeat %dx</string>
    <string name="action_chip_toggle_hold_repeat">Toggle hold &amp; repeat</string>
    <string name="action_title_intent_start_activity">Start activity: %s</string>
    <string name="action_title_intent_start_service">Start service: %s</string>
    <string name="action_title_intent_send_broadcast">Send broadcast: %s</string>
    <string name="clipboard_label_keymap_uid">Key map id</string>
    <string name="trigger_error_dnd_access_denied">Permission required to work properly in Do Not Disturb mode!</string>
    <string name="trigger_error_cant_detect_in_phone_call">This trigger won\'t work while ringing or in a phone call!</string>
    <string name="trigger_error_cant_detect_in_phone_call_explanation">Android doesn\'t let accessibility services detect volume button presses while your phone is ringing or it is in a phone call but it does let input method services detect them. Therefore, you must use the Key Mapper Input Method if you want this trigger to work.</string>
    <string name="trigger_error_gesture_stroke_count_too_high">Too many fingers to perform gesture due to android limitations.</string>
    <string name="trigger_error_gesture_duration_too_high">Gesture duration is too high due to android limitations.</string>
    <string name="trigger_error_dpad_ime_not_selected">You must be using the Key Mapper Input Method for DPAD triggers to work!</string>
    <string name="trigger_error_system_bridge_unsupported">Expert Mode is unsupported on this Android version</string>
    <string name="trigger_error_system_bridge_disconnected">Expert Mode not started!</string>
    <string name="trigger_error_evdev_device_not_found">Trigger device not connected!</string>
    <string name="trigger_error_migrate_screen_off_key_map">Migrate this screen off trigger</string>
    <string name="home_error_is_battery_optimised">Disable battery optimization.</string>
    <string name="home_error_key_maps_paused">Your key maps are paused!</string>
    <string name="home_error_key_maps_paused_button">Unpause</string>
    <string name="home_error_accessibility_service_is_disabled">The accessibility service needs to be turned on for your key maps to work!</string>
    <string name="home_error_accessibility_service_is_crashed">Your phone killed Key Mapper when it was in the background or it crashed!</string>
    <string name="home_success_accessibility_service_is_enabled">The accessibility service is enabled! Your key maps should work.</string>
    <string name="home_error_logging_enabled">Extra logging is turned on! Turn this off if you aren\'t trying to fix an issue.</string>
    <string name="home_error_logging_enabled_button">Turn off</string>
    <string name="home_error_notification_permission">Turn on notifications for better on-screen messages, more actions and service updates.</string>
    <string name="title_about">About</string>
    <string name="description_open_app">Open %s</string>
    <string name="description_text_block">Type \'%s\'</string>
    <string name="description_keyevent">Input %s%s</string>
    <string name="description_keyevent_from_device">Input %s%s from %s</string>
    <string name="description_url">Open %s</string>
    <string name="description_tap_coordinate_default">Tap screen (%d, %d)</string>
    <string name="description_tap_coordinate_with_description">Tap screen (%s)</string>
    <string name="description_swipe_coordinate_default">Swipe with %d finger(s) from (%d,%d) to (%d,%d) in %dms</string>
    <string name="description_swipe_coordinate_with_description">Swipe with %d finger(s) from (%d,%d) to (%d,%d) in %dms (%s)</string>
    <string name="description_pinch_coordinate_default">%s with %d finger(s) on (%d,%d) with a pinch distance of %dpx in %dms</string>
    <string name="description_pinch_coordinate_with_description">%s with %d finger(s) on (%d,%d) to with a pinch distance of %dpx %dms (%s)</string>
    <string name="description_phone_call">Call %s</string>
    <string name="description_sound">Play sound: %s</string>
    <string name="description_sound_unknown">Play unknown sound</string>
    <string name="option_list_header">Options:</string>
    <string name="action_list_header">Actions:</string>
    <string name="trigger_header">Trigger: </string>
    <string name="trigger_header_none">None</string>
    <string name="constraint_list_header">Constraints:</string>
    <string name="fingerprint_gesture_up">Swipe up</string>
    <string name="fingerprint_gesture_down">Swipe down</string>
    <string name="fingerprint_gesture_left">Swipe left</string>
    <string name="fingerprint_gesture_right">Swipe right</string>
    <string name="header_intent_extras">Extras</string>
    <string name="hint_coordinate_x" translatable="false">X</string>
    <string name="hint_coordinate_y" translatable="false">Y</string>
    <string name="hint_coordinate_x_start">Start X</string>
    <string name="hint_coordinate_y_start">Start Y</string>
    <string name="hint_coordinate_x_end">End X</string>
    <string name="hint_coordinate_y_end">End Y</string>
    <string name="action_short_log_message">Toggle short messages</string>
    <string name="action_copy_log">Copy</string>
    <string name="action_clear_log">Clear</string>
</resources>