<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_content_copy"
        android:title="@string/action_copy_log"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_outline_save_24"
        android:title="@string/action_save_log"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_baseline_delete_outline_24"
        android:title="@string/action_clear_log"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_short_messages"
        android:title="@string/action_short_log_message"
        app:showAsAction="never" />

</menu>