<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="model"
            type="io.github.sds100.keymapper.base.utils.ui.ChooseAppStoreModel" />
    </data>

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_play_store"
            android:visibility="@{model.playStoreLink != null ? View.VISIBLE : View.GONE}"
            app:chipIcon="@drawable/ic_google_play"
            app:chipIconTint="?attr/colorPrimary"
            app:iconStartPadding="4dp"
            app:openUrlOnClick="@{model.playStoreLink}" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_fdroid"
            android:visibility="@{model.fdroidLink != null ? View.VISIBLE : View.GONE}"
            app:chipIcon="@drawable/ic_fdroid"
            app:chipIconTint="?attr/colorPrimary"
            app:openUrlOnClick="@{model.fdroidLink}" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_github"
            android:visibility="@{model.githubLink != null ? View.VISIBLE : View.GONE}"
            app:chipIcon="@drawable/ic_github"
            app:chipIconTint="?attr/colorPrimary"
            app:openUrlOnClick="@{model.githubLink}" />

    </com.google.android.material.chip.ChipGroup>
</layout>